@@ -25,6 +25,7 @@ Cacti CHANGELOG
 -issue#4960: Setting context for connections throws error in PHP 8.x
 -issue#4964: Tree search not hiding non-matching tree objects
 -issue#4966: When viewing the Device page, ensure that the Device Template filter only includes Devices Types in use
+-issue#4971: Deprecation warnings in log files with php 8.2 associate with mib parser
 -issue#4978: Graph timezone issue
 -issue#4980: Business Hour php errors
 -feature#1100: Structured path not created when using remote poller and Update On-Demand
